fix(resume): fix block alignment

--- a/app/components/Card/Card.module.scss
+++ b/app/components/Card/Card.module.scss
@@ -30,7 +30,6 @@
 	flex-direction: column;
 	gap: 8px;
 	line-height: 1.1;
-	text-indent: 12px hanging;
 }
 
 .tags {
