--- a/app/pages/Resume/Resume.module.scss
+++ b/app/pages/Resume/Resume.module.scss
@@ -91,6 +91,7 @@ $widthBreakPoint: 550px;
 		display: flex;
 		flex-direction: column;
 		gap: 24px;
+		justify-content: space-between;
 	}
 }
 
